BEAUT-784: [BUG-Beautify][MAC] Text inputting is cut off the bottom

--- a/beautify-la-html/content/4_style_1.css
+++ b/beautify-la-html/content/4_style_1.css
@@ -1507,7 +1507,8 @@ only screen and (               min-resolution:2dppx)      and (min-width:320px)
 .settings-page .btn-popover{width:auto;}
 .settings-page .btn-settings .icon-delete{margin-top:5px;}
 .settings-page .hour-to{line-height:32px;color:#999;font-weight:bold;}
-.settings-page .form-control{box-shadow:none;font:20px/24px ralewaymedium, sans-serif;color:#000;border-color:#ccc;}
+.settings-page .form-control{box-shadow:none;font:20px/24px ralewaymedium, sans-serif;color:#000;border-color:#ccc;padding-top:0;
+padding-bottom:0;}
 .settings-page textarea.form-control{height:100px;}
 .settings-page textarea.txt-l{
 	max-width:600px;
